# AI-trading-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  SQL-start-command  package-lock.json  pyrightconfig.json  render.yaml
trading-ai-model/: .env.example  .gitignore  README.md  docker-compose.yml  load_ohlcv.sh  package.json  pyproject.toml  requirements.txt
trading-ai-model/agents/: __init__.py  audit_agent.py  base.py  chart_reading_agent.py  execution_agent.py  feature_fusion_agent.py  learning_agent.py  llm_explainer.py  market_data_agent.py  news_runtime.py  pipeline_context.py  prediction_agent.py  risk_agent.py  schemas.py  supervisor.py  trade_planning_agent.py
trading-ai-model/agents/learning/: __init__.py  model_registry.py  retrain_pipeline.py
trading-ai-model/agents/method_agents/: __init__.py  ancient_number_agent.py  balance_line_agent.py  elliott_wave_agent.py  harmonic_agent.py  momentum_agent.py  monte_carlo_agent.py  strategy_math_agent.py
trading-ai-model/agents/news/: economic_calendar_service.py  market_news_agent.py  news_db_store.py  news_ingestion_service.py  news_risk_filter_service.py  news_schemas.py  news_sentiment_service.py  news_symbol_mapper.py
trading-ai-model/api/: __init__.py  main.py
trading-ai-model/api/middleware/: rate_limiter.py
trading-ai-model/api/routes/: __init__.py  health.py  news.py  signals.py
trading-ai-model/backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  gi.example  main.py  pyproject.toml  requirements-ta.txt  requirements.txt
trading-ai-model/backend/.cursor/: mcp.json
trading-ai-model/backend/agents/: __init__.py  audit_agent.py  chart_reading_agent.py  confluence_agent.py  execution_agent.py  feature_fusion_agent.py  learning_agent.py  llm_explainer.py  market_data_agent.py  method_analysis_runner.py  news_runtime.py  pipeline_context.py  prediction_agent.py  registry.py  risk_agent.py  schemas.py  supervisor.py  trade_planning_agent.py
trading-ai-model/backend/api/: main.py
trading-ai-model/backend/chart_watcher/: __init__.py  bar_assembler.py  (+4 more)
trading-ai-model/config/: model_weights.py  risk_params.py  settings.py
trading-ai-model/dashboard/: __init__.py
trading-ai-model/docs/: architecture.md  backtesting_methodology.md  go-live-checklist.md  research_log.md  rolling-swing-discovery-plan.md  signal_rank_scoring.md
trading-ai-model/frontend/: .env.example  .env.production  README.md  env.vercel.example  index.html  package-lock.json  package.json  vercel.json
trading-ai-model/live/: __init__.py
trading-ai-model/mcts/: action_space.py  mcts_planner.py  policy_network.py  state_evaluator.py  tree_node.py
trading-ai-model/ml/: __init__.py
trading-ai-model/paper_trading/: __init__.py
trading-ai-model/pipeline/: __init__.py  trading_supervisor.py
trading-ai-model/research/: __init__.py  experiment_tracker.py  gann_research_runner.py  number_theory_lab.py
trading-ai-model/risk/: drawdown_monitor.py  position_sizer.py  risk_engine.py
trading-ai-model/scripts/: init_timescale.sql
trading-ai-model/signal_engine/: confirmation_weighter.py  layer_scores.py  signal_rank_service.py  signal_schema.py
trading-ai-model/validation/: backtest_engine.py  random_baseline_generator.py  walk_forward_tester.py
(+452 files in other folders)
