[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai-model"
version = "0.1.0"
description = "Multi-layer trading signal engine with SignalRank scoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Trading AI Team" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "httpx>=0.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
]
ml = [
    "torch>=2.1",
    "mlflow>=2.10",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
storage = [
    "pyarrow>=14.0",
    "influxdb-client>=1.38",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*", "engines*", "ml*", "mcts*", "signal_engine*", "risk*", "validation*", "research*", "paper_trading*", "live*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
