[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai-model"
version = "0.1.0"
description = "Multi-layer trading signal engine with SignalRank scoring"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Trading AI Team" }]
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "hmmlearn>=0.3.0",
    "mlflow>=2.11.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "uuid6>=2022.10.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1",
    "httpx[test]",
    "ruff>=0.1",
    "mypy>=1.8",
]
ml = [
    "torch>=2.2.0",
    "pytorch-forecasting>=1.0.0",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
storage = [
    "pyarrow>=14.0",
    "influxdb-client>=1.38",
]
ta = [
    "pandas-ta>=0.3.14b",  # requires numba; Python 3.11–3.13 only
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*", "engines*", "agents*", "ml*", "mcts*", "signal_engine*", "risk*", "validation*", "research*", "paper_trading*", "live*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
